crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-cayenne[file]_tpcds_q3_explain_sf100.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpcds_q3"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                   |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: dt.d_year ASC NULLS LAST, sum_agg DESC NULLS FIRST, brand_id ASC NULLS LAST, fetch=100                                                                                                                           |
|               |   Projection: dt.d_year, item.i_brand_id AS brand_id, item.i_brand AS brand, sum(store_sales.ss_net_profit) AS sum_agg                                                                                                 |
|               |     Aggregate: groupBy=[[dt.d_year, item.i_brand, item.i_brand_id]], aggr=[[sum(store_sales.ss_net_profit)]]                                                                                                           |
|               |       Projection: item.i_brand_id, item.i_brand, store_sales.ss_net_profit, dt.d_year                                                                                                                                  |
|               |         Inner Join: store_sales.ss_sold_date_sk = dt.d_date_sk                                                                                                                                                         |
|               |           Projection: item.i_brand_id, item.i_brand, store_sales.ss_sold_date_sk, store_sales.ss_net_profit                                                                                                            |
|               |             Inner Join: item.i_item_sk = store_sales.ss_item_sk                                                                                                                                                        |
|               |               Projection: item.i_item_sk, item.i_brand_id, item.i_brand                                                                                                                                                |
|               |                 Filter: item.i_manufact_id = Int32(445)                                                                                                                                                                |
|               |                   TableScan: item projection=[i_item_sk, i_brand_id, i_brand, i_manufact_id], partial_filters=[item.i_manufact_id = Int32(445)]                                                                        |
|               |               TableScan: store_sales projection=[ss_sold_date_sk, ss_item_sk, ss_net_profit]                                                                                                                           |
|               |           SubqueryAlias: dt                                                                                                                                                                                            |
|               |             Projection: date_dim.d_date_sk, date_dim.d_year                                                                                                                                                            |
|               |               Filter: date_dim.d_moy = Int32(12)                                                                                                                                                                       |
|               |                 TableScan: date_dim projection=[d_date_sk, d_year, d_moy], partial_filters=[date_dim.d_moy = Int32(12)]                                                                                                |
| physical_plan | SortPreservingMergeExec: [d_year@0 ASC NULLS LAST, sum_agg@3 DESC, brand_id@1 ASC NULLS LAST], fetch=100                                                                                                               |
|               |   ProjectionExec: expr=[d_year@0 as d_year, i_brand_id@2 as brand_id, i_brand@1 as brand, sum(store_sales.ss_net_profit)@3 as sum_agg]                                                                                 |
|               |     SortExec: TopK(fetch=100), expr=[d_year@0 ASC NULLS LAST, sum(store_sales.ss_net_profit)@3 DESC, i_brand_id@2 ASC NULLS LAST], preserve_partitioning=[true]                                                        |
|               |       AggregateExec: mode=FinalPartitioned, gby=[d_year@0 as d_year, i_brand@1 as i_brand, i_brand_id@2 as i_brand_id], aggr=[sum(store_sales.ss_net_profit)]                                                          |
|               |         RepartitionExec: partitioning=Hash([d_year@0, i_brand@1, i_brand_id@2], 16), input_partitions=16                                                                                                               |
|               |           AggregateExec: mode=Partial, gby=[d_year@3 as d_year, i_brand@1 as i_brand, i_brand_id@0 as i_brand_id], aggr=[sum(store_sales.ss_net_profit)]                                                               |
|               |             HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(d_date_sk@0, ss_sold_date_sk@2)], projection=[i_brand_id@2, i_brand@3, ss_net_profit@5, d_year@1]                 |
|               |               CoalescePartitionsExec                                                                                                                                                                                   |
|               |                 ProjectionExec: expr=[d_date_sk@0 as d_date_sk, d_year@1 as d_year]                                                                                                                                    |
|               |                   SchemaCastScanExec                                                                                                                                                                                   |
|               |                     CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                  |
|               |                       BytesProcessedExec                                                                                                                                                                               |
|               |                         DataSourceExec: file_groups={4 groups: [<redacted>]}, projection=[d_date_sk, d_year, d_moy], file_type=vortex, predicate: d_moy@8 = 12                                                         |
|               |               HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(i_item_sk@0, ss_item_sk@1)], projection=[i_brand_id@1, i_brand@2, ss_sold_date_sk@3, ss_net_profit@5]           |
|               |                 CoalescePartitionsExec                                                                                                                                                                                 |
|               |                   ProjectionExec: expr=[i_item_sk@0 as i_item_sk, i_brand_id@1 as i_brand_id, i_brand@2 as i_brand]                                                                                                    |
|               |                     SchemaCastScanExec                                                                                                                                                                                 |
|               |                       CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                |
|               |                         BytesProcessedExec                                                                                                                                                                             |
|               |                           DataSourceExec: file_groups={16 groups: [<redacted>]}, projection=[i_item_sk, i_brand_id, i_brand, i_manufact_id], file_type=vortex, predicate: i_manufact_id@13 = 445                       |
|               |                 SchemaCastScanExec                                                                                                                                                                                     |
|               |                   CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                    |
|               |                     BytesProcessedExec                                                                                                                                                                                 |
|               |                       DataSourceExec: file_groups={16 groups: [<redacted>]}, projection=[ss_sold_date_sk, ss_item_sk, ss_net_profit], file_type=vortex, predicate: DynamicFilter [ empty ] AND DynamicFilter [ empty ] |
|               |                                                                                                                                                                                                                        |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
