crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-cayenne[file]_tpcds_q42_explain_sf100.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpcds_q42"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                      |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: sum(store_sales.ss_ext_sales_price) DESC NULLS FIRST, dt.d_year ASC NULLS LAST, item.i_category_id ASC NULLS LAST, item.i_category ASC NULLS LAST, fetch=100                                                        |
|               |   Aggregate: groupBy=[[dt.d_year, item.i_category_id, item.i_category]], aggr=[[sum(store_sales.ss_ext_sales_price)]]                                                                                                     |
|               |     Projection: dt.d_year, store_sales.ss_ext_sales_price, item.i_category_id, item.i_category                                                                                                                            |
|               |       Inner Join: store_sales.ss_item_sk = item.i_item_sk                                                                                                                                                                 |
|               |         Projection: dt.d_year, store_sales.ss_item_sk, store_sales.ss_ext_sales_price                                                                                                                                     |
|               |           Inner Join: dt.d_date_sk = store_sales.ss_sold_date_sk                                                                                                                                                          |
|               |             SubqueryAlias: dt                                                                                                                                                                                             |
|               |               Projection: date_dim.d_date_sk, date_dim.d_year                                                                                                                                                             |
|               |                 Filter: date_dim.d_moy = Int32(11) AND date_dim.d_year = Int32(1998)                                                                                                                                      |
|               |                   TableScan: date_dim projection=[d_date_sk, d_year, d_moy], partial_filters=[date_dim.d_moy = Int32(11), date_dim.d_year = Int32(1998)]                                                                  |
|               |             TableScan: store_sales projection=[ss_sold_date_sk, ss_item_sk, ss_ext_sales_price]                                                                                                                           |
|               |         Projection: item.i_item_sk, item.i_category_id, item.i_category                                                                                                                                                   |
|               |           Filter: item.i_manager_id = Int32(1)                                                                                                                                                                            |
|               |             TableScan: item projection=[i_item_sk, i_category_id, i_category, i_manager_id], partial_filters=[item.i_manager_id = Int32(1)]                                                                               |
| physical_plan | SortPreservingMergeExec: [sum(store_sales.ss_ext_sales_price)@3 DESC, d_year@0 ASC NULLS LAST, i_category_id@1 ASC NULLS LAST, i_category@2 ASC NULLS LAST], fetch=100                                                    |
|               |   SortExec: TopK(fetch=100), expr=[sum(store_sales.ss_ext_sales_price)@3 DESC, i_category_id@1 ASC NULLS LAST, i_category@2 ASC NULLS LAST], preserve_partitioning=[true]                                                 |
|               |     AggregateExec: mode=FinalPartitioned, gby=[d_year@0 as d_year, i_category_id@1 as i_category_id, i_category@2 as i_category], aggr=[sum(store_sales.ss_ext_sales_price)], ordering_mode=PartiallySorted([0])          |
|               |       RepartitionExec: partitioning=Hash([d_year@0, i_category_id@1, i_category@2], 16), input_partitions=16                                                                                                              |
|               |         AggregateExec: mode=Partial, gby=[d_year@0 as d_year, i_category_id@2 as i_category_id, i_category@3 as i_category], aggr=[sum(store_sales.ss_ext_sales_price)], ordering_mode=PartiallySorted([0])               |
|               |           HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(i_item_sk@0, ss_item_sk@1)], projection=[d_year@3, ss_ext_sales_price@5, i_category_id@1, i_category@2]                |
|               |             CoalescePartitionsExec                                                                                                                                                                                        |
|               |               ProjectionExec: expr=[i_item_sk@0 as i_item_sk, i_category_id@1 as i_category_id, i_category@2 as i_category]                                                                                               |
|               |                 SchemaCastScanExec                                                                                                                                                                                        |
|               |                   CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                       |
|               |                     BytesProcessedExec                                                                                                                                                                                    |
|               |                       DataSourceExec: file_groups={16 groups: [<redacted>]}, projection=[i_item_sk, i_category_id, i_category, i_manager_id], file_type=vortex, predicate: i_manager_id@20 = 1                            |
|               |             HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(d_date_sk@0, ss_sold_date_sk@0)], projection=[d_year@1, ss_item_sk@3, ss_ext_sales_price@4]                          |
|               |               CoalescePartitionsExec                                                                                                                                                                                      |
|               |                 ProjectionExec: expr=[d_date_sk@0 as d_date_sk, d_year@1 as d_year]                                                                                                                                       |
|               |                   SchemaCastScanExec                                                                                                                                                                                      |
|               |                     CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                     |
|               |                       BytesProcessedExec                                                                                                                                                                                  |
|               |                         DataSourceExec: file_groups={4 groups: [<redacted>]}, projection=[d_date_sk, d_year, d_moy], file_type=vortex, predicate: d_moy@8 = 11 AND d_year@6 = 1998                                        |
|               |               SchemaCastScanExec                                                                                                                                                                                          |
|               |                 CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                         |
|               |                   BytesProcessedExec                                                                                                                                                                                      |
|               |                     DataSourceExec: file_groups={16 groups: [<redacted>]}, projection=[ss_sold_date_sk, ss_item_sk, ss_ext_sales_price], file_type=vortex, predicate: DynamicFilter [ empty ] AND DynamicFilter [ empty ] |
|               |                                                                                                                                                                                                                           |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
